# iamthemess

./: .gitattributes  .gitignore  README.md
SAFEVISION/safevision/safevision.tech/: libcrypto_symbols.txt  liboqs_symbols.txt  libssl_symbols.txt  settings.gradle.kts
SAFEVISION/safevision/safevision.tech/app/: .gitignore  build.gradle  build.gradle.kts  gradle.properties  java_pid80305.hprof  ktlint  local.properties  settings.gradle.kts  test  test.cpp
SAFEVISION/safevision/safevision.tech/app/signaling-server/: package-lock.json  package.json  server.js
SAFEVISION/safevision/safevision.tech/app/src/main/java/safevision/tech/: CMakeLists.txt  CryptoManager.kt  FirstFragment.java  FirstFragment.kt  KeyboardFragment.kt  MainActivity.java  MainActivity.kt  MessageEncryption.kt  MessagingFragment.kt  OnboardingFragment.kt  QuantumKeyGenerator.kt  QuantumKeyService.kt  QuantumLib.java  SecondFragment.java  SecondFragment.kt  SecureWallet.kt  SplashScreenActivity.kt  WalletFragment.kt  WebRTCManager.kt  WebRTCManagerSingleton.kt  WebSocketClient.kt  XRPService.kt
SAFEVISION/safevision/safevision.tech/app/test_openssl/: test_openssl.c
SAFEVISION/safevision/safevision.tech/openssl-1.1.1w/: Makefile  configdata.pm  libcrypto.pc  libssl.pc  openssl.pc  pod2htmd.tmp
SAFEVISION/safevision/safevision.tech/openssl-3.3.2/: Makefile  Makefile.in  builddata.pm  configdata.pm  installdata.pm  libcrypto.pc  libssl.pc  openssl.pc  pod2htmd.tmp
SAFEVISION/safevision/safevision.tech/test-ndk/: Android.mk
SAFEVISION/webrtc-sdk/: gradle.properties
iamthemess.git/: config
(+1080 files in other folders)
